[package]
name = "oping"
description = "Rust bindings for liboping, a simple ICMP ping library"
version = "0.2.0"
authors = ["Chris Fallin <cfallin@c1f.net>"]
repository = "https://github.com/cfallin/rust-oping"
documentation = "https://cfallin.github.io/rust-oping/oping/"

license = "MIT"

[dependencies]
libc = "0.2"
